--- a/packages/gatsby/package.json
+++ b/packages/gatsby/package.json
@@ -116,6 +116,7 @@
     "normalize-path": "^3.0.0",
     "null-loader": "^4.0.1",
     "opentracing": "^0.14.4",
+    "resolve-from": "^5.0.0",
     "p-defer": "^3.0.0",
     "parseurl": "^1.3.3",
     "physical-cpu-count": "^2.0.0",
