--- a/examples/using-styled-components/package.json
+++ b/examples/using-styled-components/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "next",
+    "gatsby-plugin-gatsby-cloud": "next",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
