--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,6 +169,9 @@ commands:
 
       - <<: *attach_to_bootstrap
       - run:
+          name: Install gatsby dev
+          commmand: yarn global add gatsby-dev-cli
+      - run:
           name: Run tests (using defaults)
           command: ./scripts/e2e-test.sh "<< parameters.test_path >>" "<< parameters.test_command >>"
 
